--- a/aliyun/login.html
+++ b/aliyun/login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/boot.css">
   <link rel="stylesheet" href="css/login.css">
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
