--- a/aliyun/rigister.html
+++ b/aliyun/rigister.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/boot.css">
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/rigiter.css">
   <script src="js/bootstrap.min.js"></script>
