--- a/aliyun/title.html
+++ b/aliyun/title.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/boot.css">
   <link rel="stylesheet" href="css/title.css">
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
@@ -245,11 +245,11 @@
           <!-- 下 -->
           <div class="recommend-list-item-bottom">
             <span>活动价格</span>
-            <p><input type="radio"><span>￥ 159 .00 /3个月</span></p>
-            <p></p><input type="radio"><span>￥ 59 .00 /月</span></p>
+            <p><input id="input1" type="radio" name="price"><label for="input1">￥ 159 .00 /3个月</label></p>
+            <p><input id="input2" type="radio" name="price"><label for="input2">￥ 59 .00 /月</label></p>
             <a href="#">立即购买</a>
           </div>
-          <div>
+          <div class="">
             基于高可靠双机热备架构及可无缝扩展的集群架构，满足高读写性能场景及容量需弹性变配的业务需求
           </div>
         </li>
