--- a/aliyun/index.html
+++ b/aliyun/index.html
@@ -6,219 +6,146 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/headerbase.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
     <title>Document</title>
 </head>
 
 <body>
-        <div >
-            <!-- 顶部 -->
-            <div class="header-top">
-                <ul class="top">
-                    <li class="w-25 display-block">
-                        <a class="w-100" href="#">
-                            <img class="my-img1" src="img/index/logo.png">
-                            <img class="my-aliyun my-img1" src="img/index/aliyun.gif">
-                        </a>
-                    </li>
-                    <!-- 搜索框 -->
-                    <li class="w-50 display-block">
-                        <input class="search-input" type="text" placeholder="Redis">
-                        <img class="search-img" src="img/index/search.png">
-                    </li>
-                    <!-- 下拉菜单 -->
-                    <li class="w-10">
-                        <select>
-                            <option name="language" id="zhongguo">中国站</option>
-                            <option name="language" id="meiguo">English</option>
-                            <option name="language" id="deguo">德语</option>
-                            <option name="language" id="yindu">印度语</option>
-                        </select>
-                    </li>
-                    <!-- 购物车 -->
-                    <li>
-                        <img class="my-img2" src="img/index/gouwuche.png" alt="车">
-                    </li>
-                    <li class="w-5 middle">
-                        <a href="#">购物车</a>
-                    </li>
-                    <li class="w-5 middle">
-                        <a href="#">控制台</a>
-                    </li>
-                    <li class="w-5 middle">
-                        <a href="#">文档</a>
-                    </li>
-                    <li class="w-5 middle">
-                        <a href="#">备案</a>
-                    </li>
-                    <li class="w-5 middle">
-                        <a href="#">邮箱</a>
-                    </li>
-                    <li class="w-5 middle">
-                        <a href="#">登录</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- 导航栏 -->
-            <div class="nav">
-                <!-- 导航 -->
-                <ul>
-                    <li>
-                        <a href="#">最新活动</a>
-                    </li>
-                    <li>
-                        <a href="#">产品</a>
-                        <!-- <div class="nav-title"></div> -->
-                        <div class="nav-block"></div>
-                    </li>
-                    <li>
-                        <a href="#">解决方案</a>
-                        <!-- <div class="nav-title"></div> -->
-                        <div class="nav-block"></div>
-                    </li>
-                    <li>
-                        <a href="#">定价</a>
-                    </li>
-                    <li>
-                        <a href="#">ET大脑</a>
-                        <!-- <div class="nav-title"></div> -->
-                        <div class="nav-block"></div>
-                    </li>
-                    <li>
-                        <a href="#">数据智能</a>
-                        <!-- <div class="nav-title"></div> -->
-                        <div class="nav-block"></div>
-                    </li>
-                    <li>
-                        <a href="#">安全</a>
-                        <!-- <div class="nav-title"></div> -->
-                        <div class="nav-block"></div>
-                    </li>
-                    <li>
-                        <a href="#">云市场</a>
-                    </li>
-                    <li>
-                        <a href="#">服务</a>
-                    </li>
-                    <li>
-                        <a href="#">合作伙伴</a>
-                    </li>
-                </ul>
-                <!-- 登录 -->
-                <a href="#">免费注册</a>
-            </div>
-            <!-- 弹出导航内容 -->
-
-        </div>
     <!-- 轮播图 -->
     <div class="banner">
-        <div class="header">
-            <!-- 顶部 -->
-            <div class="header-top">
-                <ul class="top">
-                    <li class="w-25 display-block">
-                        <a class="w-100" href="#">
-                            <img class="my-img1" src="img/index/logo.png">
-                            <img class="my-aliyun my-img1" src="img/index/aliyun.gif">
+        <div id="header">
+            <div class="header">
+                <!-- 头部 bar -->
+                <div class="header-top">
+                    <div class="header-left-hb">
+                        <img src="img/header/hanbaobao.png" alt="">
+                    </div>
+                    <div class="header-index-img">
+                        <a href="#">
+                            <img src="img/header/aliyun1.gif" alt="">
+                            <img src="img/header/logo.png" alt="">
                         </a>
-                    </li>
-                    <!-- 搜索框 -->
-                    <li class="w-50 display-block">
-                        <input class="search-input" type="text" placeholder="Redis">
-                        <img class="search-img" src="img/index/search.png">
-                    </li>
-                    <!-- 下拉菜单 -->
-                    <li class="w-10">
-                        <select>
-                            <option name="language" id="zhongguo">中国站</option>
-                            <option name="language" id="meiguo">English</option>
-                            <option name="language" id="deguo">德语</option>
-                            <option name="language" id="yindu">印度语</option>
-                        </select>
-                    </li>
-                    <!-- 购物车 -->
-                    <li>
-                        <img class="my-img2" src="img/index/gouwuche.png" alt="车">
-                    </li>
-                    <li class="w-5 middle">
-                        <a href="#">购物车</a>
-                    </li>
-                    <li class="w-5 middle">
-                        <a href="#">控制台</a>
-                    </li>
-                    <li class="w-5 middle">
-                        <a href="#">文档</a>
-                    </li>
-                    <li class="w-5 middle">
-                        <a href="#">备案</a>
-                    </li>
-                    <li class="w-5 middle">
-                        <a href="#">邮箱</a>
-                    </li>
-                    <li class="w-5 middle">
-                        <a href="#">登录</a>
-                    </li>
-                </ul>
+                    </div>
+                    <input class="header-search" type="text"><img class="header-search-img" src="img/header/search.png" alt="">
+                    <div class="header-top-right">
+                        <ul>
+                            <li><a href="#">登录</a></li>
+                            <li><a href="#">邮箱</a></li>
+                            <li><a href="#">备案</a></li>
+                            <li><a href="#">文档</a></li>
+                            <li><a href="#">控制台</a></li>
+                            <li><img class="header-shoping-img" src="img/header/shopingCar.png" alt=""><a href="#">购物车</a></li>
+                            <li>中国站</li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- 头部 导航栏bar -->
+                <div class="header-nav">
+                    <ul>
+                        <li><a href="#">最新活动</a></li>
+                        <li><a href="#">产品</a></li>
+                        <li><a href="#">解决方案</a></li>
+                        <li><a href="#">定价</a></li>
+                        <li><a href="#">ET大脑</a></li>
+                        <li><a href="#">数据智能</a></li>
+                        <li><a href="#">安全</a></li>
+                        <li><a href="#">云市场</a></li>
+                        <li><a href="#">支持与服务</a></li>
+                        <li><a href="#">合作伙伴</a></li>
+                    </ul>
+                    <a class="header-nav-register" href="#">免费注册</a>
+                </div>
+                <!-- hb悬停 导航框 -->
+                <div class="header-hover">
+                    <div class="header-hover-left">
+                        <ul>
+                            <li>阿里云计算<span>&gt;</span></li>
+                            <li>产品<span>&gt;</span></li>
+                            <li>解决方案<span>&gt;</span></li>
+                            <li>云市场<span>&gt;</span></li>
+                            <li>开发者<span>&gt;</span></li>
+                            <li>文档<span>&gt;</span></li>
+                            <li>支持与服务<span>&gt;</span></li>
+                            <li>云栖社区<span>&gt;</span></li>
+                            <li>阿里云大学<span>&gt;</span></li>
+                            <li>合作与生态<span>&gt;</span></li>
+                            <hr>
+                            <li>官方入口<span>&gt;</span></li>
+                            <li>创业基地<span>&gt;</span></li>
+                            <li>服务社区<span>&gt;</span></li>
+                            <li>合作与生态</li>
+                            <li>创业基地</li>
+                        </ul>
+                    </div>
+                    <div class="header-hover-center">
+                        <ul>
+                        <li>精选<span>&gt;</span></li>
+                        <li>人工智能<span>&gt;</span></li>
+                        <li>云计算基础<span>&gt;</span></li>
+                        <li>物联网<span>&gt;</span></li>
+                        <li>大数据<span>&gt;</span></li>
+                        <li>安全<span>&gt;</span></li>
+                        <li>企业应用<span>&gt;</span></li>
+                        <li>开发者服务<span>&gt;</span></li>
+                        </ul>
+                    </div>
+                    <div class="header-hover-right">
+                        <ul>
+                            <li><a href="#">公司/商标注册等服务</a></li>
+                            <li><a href="#">视频直播</a></li>
+                            <li><a href="#">销售管理</a></li>
+                            <li><a href="#">财务管理</a></li>
+                            <li><a href="#">协同办公</a></li>
+                            <li><a href="#">人事管理</a></li>
+                            <li><a href="#">人脸查找</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <!-- 导航栏 -->
-            <div class="nav">
-                <!-- 导航 -->
-                <ul>
-                    <li>
-                        <a href="#">最新活动</a>
-                    </li>
-                    <li>
-                        <a href="#">产品</a>
-                        <!-- <div class="nav-title"></div> -->
-                        <div class="nav-block"></div>
-                    </li>
-                    <li>
-                        <a href="#">解决方案</a>
-                        <!-- <div class="nav-title"></div> -->
-                        <div class="nav-block"></div>
-                    </li>
-                    <li>
-                        <a href="#">定价</a>
-                    </li>
-                    <li>
-                        <a href="#">ET大脑</a>
-                        <!-- <div class="nav-title"></div> -->
-                        <div class="nav-block"></div>
-                    </li>
-                    <li>
-                        <a href="#">数据智能</a>
-                        <!-- <div class="nav-title"></div> -->
-                        <div class="nav-block"></div>
-                    </li>
-                    <li>
-                        <a href="#">安全</a>
-                        <!-- <div class="nav-title"></div> -->
-                        <div class="nav-block"></div>
-                    </li>
-                    <li>
-                        <a href="#">云市场</a>
-                    </li>
-                    <li>
-                        <a href="#">服务</a>
-                    </li>
-                    <li>
-                        <a href="#">合作伙伴</a>
-                    </li>
-                </ul>
-                <!-- 登录 -->
-                <a href="#">免费注册</a>
-            </div>
-            <!-- 弹出导航内容 -->
-
         </div>
+    
+        <!-- 轮播图 图片 -->
         <div class="banner-item">
             <img src="img/index/banner1.jpg">
             <img src="img/index/banner2.jpg">
             <img src="img/index/banner3.jpg">
             <img src="img/index/banner4.jpg">
         </div>
+        <!-- 轮播最下面描述 -->
+        <div class="banner-detail">
+            <ul class="row">
+                <li>
+                    <h4>免费套餐</h4>
+                    <p> 提供40余款高性能云产品，帮助您获得上云实践经验</p>
+                </li>
+                <li>
+                    <h4>免费套餐</h4>
+                    <p> 提供40余款高性能云产品，帮助您获得上云实践经验</p>
+                </li>
+                <li>
+                    <h4>免费套餐</h4>
+                    <p> 提供40余款高性能云产品，帮助您获得上云实践经验</p>
+                </li>
+                <li>
+                    <h4>免费套餐</h4>
+                    <p> 提供40余款高性能云产品，帮助您获得上云实践经验</p>
+                </li>
+                <li>
+                    <h4>免费套餐</h4>
+                    <p> 提供40余款高性能云产品，帮助您获得上云实践经验</p>
+                </li>
+            </ul>
+        </div>
     </div>
+        <div class="banner-title text-center">
+            <img src="img/index/aoyun.png" alt="">
+            <h1 class="h3">全球领先、安全、稳定的云计算产品</h1>
+            <p><a class="h3" href="#">计算、存储、网络、安全、大数据、人工智能，普惠科技助您飞跃发展</a></p>
+        </div>
+    <!-- 内容 -->
     <section id="main">
         <div class="product-icon">
             <ul>
@@ -480,10 +407,155 @@
                 </a>
             </div>
         </div>
+        <!-- 图片放大区 -->
+        <div class="main-img-scale">
+            <div class="main-img-scale-title">
+                <h1>大咖云集，知识分享的开发者技术社区</h1>
+                <a href="#">实战干货、在线直播、专家问答、技术论坛，学习，成长，分享，共建</a>
+            </div>
+            <div class="main-img-scale-list">
+                <ul class="row">
+                    <li>
+                        <div class="main-img-scale-item">
+                            <div class="main-img-scale-item-scale">
+                                <img src="img/index/expend1.jpg" alt="">
+                            </div>
+                            <p>【聚能聊】来谈谈你使用过阿里云产品的经历</p>
+                        </div>
+                        <div class="main-img-scale-link">
+                            <p><a href="#">【干货】1000篇好文帮你揭开量子技术神秘面纱</a>!</p>
+                            <p><a href="#">【案例合集】阿里云场景实践研究合集</a></p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="main-img-scale-item">
+                            <div class="main-img-scale-item-scale">
+                                <img src="img/index/expend2.png" alt="">
+                            </div>
+                            <p>【聚能聊】来谈谈你使用过阿里云产品的经历</p>
+                        </div>
+                        <div class="main-img-scale-link">
+                            <p><a href="#">【干货】1000篇好文帮你揭开量子技术神秘面纱</a>!</p>
+                            <p><a href="#">【案例合集】阿里云场景实践研究合集</a></p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="main-img-scale-item">
+                            <div class="main-img-scale-item-scale">
+                                <img src="img/index/expend3.png" alt="">
+                            </div>
+                            <p>【聚能聊】来谈谈你使用过阿里云产品的经历</p>
+                        </div>
+                        <div class="main-img-scale-link">
+                            <p><a href="#">【干货】1000篇好文帮你揭开量子技术神秘面纱</a>!</p>
+                            <p><a href="#">【案例合集】阿里云场景实践研究合集</a></p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </section>
-    <footer>
-        <iframe src="footer.html" frameborder="0" class="footer"></iframe>
-    </footer>
+    <!-- footer -->
+    <div class="footer">
+      <!-- footer 上部 -->
+      <ul class="footer-top">
+         <li>
+            <h4>热门产品</h4>
+            <ul class="list">
+               <li>
+                  <a href="#">免费套餐</a>
+               </li>
+               <li>
+                  <a href="#">云数据库RDS</a>
+               </li>
+               <li>
+                  <a href="#">云存储OSS</a>
+               </li>
+               <li>
+                  <a href="#">NAT网关</a>
+               </li>
+               <li>
+                  <a href="#">负载均衡</a>
+               </li>
+               <li>
+                  <a href="#">域名注册</a>
+               </li>
+               <li>
+                  <a href="#">网站建设</a>
+               </li>
+               <li>
+                  <a href="#">大数据</a>
+               </li>
+            </ul>
+         </li>
+         <li>
+            <h4>用户热搜</h4>
+            <ul class="list">
+               <li><a href="#">网站备案</a></li>
+               <li><a href="#">网安法</a></li>
+               <li><a href="#">CDN加速</a></li>
+               <li><a href="#">API网关</a></li>
+               <li><a href="#">企业邮箱</a></li>
+               <li><a href="#">whois查询</a></li>
+               <li><a href="#">视频直播</a></li>
+               <li><a href="#">视频转码</a></li>
+            </ul>
+         </li>
+         <li>
+            <h4>更多推荐</h4>
+            <ul class="list">
+               <li><a href="#">数据科研社区</a></li>
+               <li><a href="#">阿里云大学</a></li>
+               <li><a href="#">学生机</a></li>
+               <li><a href="#">IT论坛</a></li>
+               <li><a href="#">数据可视化</a></li>
+               <li><a href="#">云虚拟机</a></li>
+               <li><a href="#">com域名</a></li>
+               <li><a href="#""">cn域名</a></li>
+            </ul>
+         </li>
+      </ul>
+      <!-- footer 下部 -->
+      <div class="footer-bottom">
+         <p>
+            <a href="#">关于我们</a>
+            <a href="#">法律声明及隐私权政策</a>
+            <a href="#">廉正举报</a>
+            <a href="#">联系我们</a>
+            <a href="#">加入阿里云</a>
+         </p>
+         <p>
+            <a href="#">阿里巴巴集团</a>
+            <a href="#">淘宝网</a>
+            <a href="#">天猫</a>
+            <a href="#">聚划算</a>
+            <a href="#">全球速卖通</a>
+            <a href="#">阿里巴巴国际交易市场</a>
+            <a href="#">1688</a>
+            <a href="#">阿里妈妈</a>
+            <a href="#">飞猪</a>
+            <a href="#">阿里云计算</a>
+            <a href="#">AliOS</a>
+            <a href="#">阿里通信</a>
+            <a href="#">万网</a>
+            <a href="#">高德</a>
+            <a href="#">友盟</a>
+            <a href="#">虾米</a>
+            <a href="#">阿里星球</a>
+            <a href="#">钉钉</a>
+            <a href="#">支付宝</a>
+         </p>
+         <p>
+            &copy;2009-2018 Aliyun.com 版权所有 ICP证：浙B2-20080101
+         </p>
+         <p>
+            <img src="img/index/jinghui.png" alt="" width="20">
+            <img src="img/index/jinmao.gif" alt="" width="20">
+            <span>浙公网安备 33010002000099号</span>
+         </p>
+      </div>
+   </div>
+    <script src="js/header.js"></script>
     <script src="js/index.js"></script>
 </body>
 
