--- a/aliyun/register.html
+++ b/aliyun/register.html
@@ -29,16 +29,16 @@
     <!-- 表单 -->
     <form class="form" action="/rigister">
       
-      <p><input type="text" placeholder="设置会员名"></p>
-      <p><input type="password" placeholder="设置你的登录密码"></p>
-      <p><input type="password" placeholder="请再次输入你的密码"></p>
+      <p><input type="text" placeholder="设置会员名"><span class="form-init small success"><img src="img/register/ok.png"> </span></p>
+      <p><input type="password" placeholder="设置你的登录密码"><span class="form-init small">请输入6-12位的字母或数字</span></p>
+      <p><input type="password" placeholder="请再次输入你的密码"><span class="form-init small">请再次输入密码</span></p>
       <p class="d-flex ">
         <span class="num-code">+86</span>  
         <input class="num" type="text" placeholder="请输入你的手机号">
       </p>
       <div class="slide">
         <div class="slide-bg">
-            <span>>></span>
+            <span>>></span> 
             <span>请点击按钮完成验证</span>
         </div>
       </div>
@@ -52,6 +52,7 @@
     
   </div>
   <!-- footer -->
+  <script src="js/jquery.min.js"></script>
   <script src="js/register.js"></script>
 </body>
 </html>
