--- a/public/register.html
+++ b/public/register.html
@@ -33,7 +33,7 @@
 
             <p><input name="uname" type="text" placeholder="设置会员名"><span class="form-init small hide"></span></p>
             <p><input name="upwd" type="password" placeholder="设置你的登录密码"><span class="form-init small hide"></span></p>
-            <p><input name="upwdag" type="password" placeholder="请再次输入你的密码"><span class="form-init small hide"></span></p>
+            <p><input class="again" type="password" placeholder="请再次输入你的密码"><span class="form-init small hide"></span></p>
             <p class="d-flex "><span class="num-code">+86</span> <input class="num" type="text" placeholder="请输入你的手机号">
             </p>
             <div class="slide">
